# NeuronHub

./: .aider.conf.yml  .aiderignore  .dockerignore  .env  .env.local.example  .gitattributes  .gitignore  .gitmodules  .ignore  .mcp.json  .npmrc  CLAUDE.md  LICENSE.md  Makefile  README.md  biome.jsonc  docker-compose.yml  manage.py  mise.local.toml.example  mise.toml  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  schema.graphql
server/: .dockerignore  Dockerfile  README.md  manage.py  persisted-queries-prev-release.json  persisted-queries.json  pyproject.toml  readme.md
server/axonhub/: asgi.py  graphql.py  settings.py  urls.py
server/axonhub/apps/db/: fields.py  models_abstract.py
server/axonhub/apps/orgs/: admin.py  models.py
server/axonhub/apps/orgs/migrations/: 0001_initial.py
server/axonhub/apps/tests/: test_cases.py  test_gen.py
server/axonhub/apps/tools/: admin.py  models.py
server/axonhub/apps/tools/graphql/: mutations.py  resolvers.py
server/axonhub/apps/tools/migrations/: 0001_initial.py  0002_rename_description_historicaltoolreview_content_and_more.py  0003_remove_historicaltool_website_url_and_more.py  0004_alter_historicaltool_domain_alter_tool_domain_and_more.py
server/axonhub/apps/tools/services/: import_github_tool.py
server/axonhub/apps/users/: admin.py  models.py
server/axonhub/apps/users/graphql/: mutations.py  resolvers.py  types.py
server/axonhub/apps/users/migrations/: 0001_initial.py
server/neuronhub/: __init__.py  asgi.py  graphql.py  hatchet_client.py  settings.py  urls.py
server/neuronhub/apps/admin/: filters.py
server/neuronhub/apps/admin/utils/: convert_md_to_html_for_admin.py
server/neuronhub/apps/algolia/: get_visible_to_base__test.py  models_abstract.py
server/neuronhub/apps/algolia/services/: algolia_reindex.py  algolia_reindex_partial.py  disable_auto_indexing_if_enabled.py
server/neuronhub/apps/anonymizer/: fields.py  registry.py  registry__test.py
server/neuronhub/apps/auth/: graphql_extension.py
server/neuronhub/apps/comments/: models.py
server/neuronhub/apps/comments/graphql/: mutations.py  resolvers.py  resolvers__test.py  types.py
server/neuronhub/apps/comments/migrations/: 0001_initial.py  0002_rename_commentvotemodel_commentvote.py  0003_alter_comment_visibility.py
server/neuronhub/apps/db/: fields.py  models_abstract.py
server/neuronhub/apps/db/services/: db_stubs_repopulate.py  db_stubs_repopulate__test.py
server/neuronhub/apps/graphql/: persisted_query_extension.py  persisted_query_extension__test.py
server/neuronhub/apps/highlighter/: admin.py  graphql.py  models.py
server/neuronhub/apps/highlighter/migrations/: 0001_initial.py  0002_posthighlight_text_postfix_posthighlight_text_prefix.py  0003_alter_posthighlight_post.py  0004_alter_posthighlight_created_at.py
server/neuronhub/apps/importer/: admin.py  models.py  tasks.py
server/neuronhub/apps/importer/graphql/: mutations.py  types.py  types_lazy.py
server/neuronhub/apps/importer/migrations/: 0001_initial.py  0002_apihourlylimit.py  0003_alter_postsource_post.py  0004_alter_postsource_post.py  0005_alter_postsource_post.py  0006_usersource_about_usersource_json_and_more.py  0007_alter_usersource_score.py  0008_remove_usersource_post_postsource_user_source.py  0009_alter_apihourlylimit_created_at_and_more.py  0010_alter_postsource_rank.py  0011_importtaskcronauthtoken.py  0012_postsource_source_html_meta.py  0013_apihourlylimit_query_date_apihourlylimit_query_hour_and_more.py  0014_merge_apihourlylimit_duplicates_add_constraint.py  0015_usersource_followed_by_users.py
server/neuronhub/apps/importer/services/: hackernews.py  hackernews__test.py  hn_comment_ranks_deriver.py  hn_comment_ranks_deriver__test.py  import_html_meta.py  request_json.py
server/neuronhub/apps/jobs/: admin.py  apps.py  graphql.py  graphql__test.py  index.py  index__test.py  models.py  signals.py  signals__test.py  tasks.py  tasks__test.py  views.py  views__test.py
server/neuronhub/apps/jobs/migrations/: 0001_initial.py  0002_historicaljob_org_detail_job_org_detail.py  0003_populate_org_detail_from_org_name.py  0004_remove_historicaljob_org_detail_and_more.py  0005_alter_job_org_historicaljobalert_jobalert.py  0006_historicaljobalert_is_remote_jobalert_is_remote.py  0007_historicaljobalert_salary_min_jobalert_salary_min.py  0008_historicaljob_slug_job_slug.py  0009_historicaljob_description_job_description.py  0009_jobalertlog.py  0009_remove_historicaljob_city_and_more.py  0010_merge_20260309_0308.py  0010_merge_20260309_1647.py  0011_remove_historicaljob_slug_jobalertlog_created_at_and_more.py  0012_historicaljob_is_published_job_is_published_and_more.py  0013_remove_historicaljob_is_visa_sponsor_and_more.py  0014_historicaljob_description_job_description.py  0015_merge_20260311_0330.py  0015_remove_historicaljob_salary_max_and_more.py  0016_historicaljob_salary_text_job_salary_text.py  0017_historicaljobalert_tz_jobalert_tz.py  0018_joblocation_job_locations.py  0018_merge_20260313_0234.py  0019_alter_historicaljob_description_and_more.py  0020_merge_20260320_2108.py  0021_jobfaqquestion.py  0022_populate_faq_questions.py  0023_alter_jobfaqquestion_answer_md.py  0024_historicaljobalert_jobs_notified_count_and_more.py  0025_historicaljob_locations_historicaljob_tags_area_and_more.py  0026_historicaljob_url_external_with_utm_and_more.py  (+40 more)
server/neuronhub/apps/orgs/: admin.py  models.py
server/neuronhub/apps/posts/: admin.py  apps.py  index.py  index__test.py  models.py  tasks.py
server/neuronhub/apps/profiles/: admin.py  graphql.py  graphql__test.py  index.py  models.py  tasks.py  tasks__test.py  views.py  views__test.py
server/neuronhub/apps/questions/: models.py
server/neuronhub/apps/sites/: admin.py  graphql.py  graphql__test.py  models.py  seo_meta__test.py
server/neuronhub/apps/tests/: playwright_helper.py  test_cases.py  test_gen.py  utils.py
server/neuronhub/apps/tools/: admin.py  models.py  models__test.py
server/neuronhub/apps/users/: admin.py  models.py  models__test.py
(+976 files in other folders)
