[project]

name = "neuronhub"
version = "0.0.0.0"
description = ""
requires-python = "~=3.13.0"

# For auditing, packages specify reputation and ordered respecevely. The format:
# [i={importance for project}, rep={overall rating}, GH={github history}, @{GH username}, {number of stars}]
dependencies = [
    # django
    "django == 5.2.*",
    "django-allauth == 65.*",
    "django-anymail == 13.*", # [i=low, rep=norm, GH=high, @medmunds, 1.8k] SF based, KLOC +84/-40
    "django-cors-headers == 4.*", # [i=high, rep=highest, @adamchainz] Django Sec Team
    "django-rich == 2.*", # [i=norm, rep=highest, @adamchainz] Django Sec Team
    "django-extensions == 4.*",
        "ipython == 9.*",
    "strawberry-graphql ~= 0.278.0",
        "strawberry-graphql-django ~= 0.65.0",
    "django-stubs[compatible-mypy] == 5.*",
    "django-health-check == 3.*", # [i=low, rep=norm, GH=norm, @revsys, 1.3k] US dev agency
    "django-simple-history == 3.*", # [i=high, rep=norm, GH=norm, @django-commons, 2.4k]
    "django-countries == 7.*", # [i=low, rep=norm, GH=norm, @SmileyChris]
    "django-fieldsignals == 0.*", # [i=low, rep=norm, GH=norm, @craigds]
    "dj-database-url == 3.*", # [i=low, rep=norm, GH=norm, @mattseymour]

    # django fields
    "django-timezone-field == 7.*", # [i=low, rep=high, GH=high, @mfogel] rich presence on SO (#103909), AirBnB, Yelp, etc
    "django-choices-field == 2.*", # [i=norm, rep=high, @bellini666] Strawberry maintainer

    # django admin
    "django-admin-sortable2 == 2.*", # [i=norm, rep=norm, GH=high, @jrief, 0.8k] worked with him
    "django-select2 == 8.*", # [i=low, rep=high, GH=high, @codingjoe, 0.8k] public CV
    "django-hijack == 3.*", # [i=none, rep=high, GH=high, @codingjoe, 1.6k] public CV
    "django-debug-toolbar == 6.*", # [i=low, rep=high, GH=high, @matthiask] 406.ch
    "django-object-actions == 5.*", # [i=none, rep=norm, GH=low, @crccheck, 0.7k] crccheck.com/blog since 2008, 100 posts
    "django-codemirror2 == 0.2", # [i=low, rep=low, GH=norm, @sk1p, 0.03k] no links, member of LiberTEM - keep frozen

    # server
    "daphne == 4.*",
    "whitenoise == 6.*",

    # utils
    "psycopg[binary] == 3.*",
    "rich == 14.*", # [i=norm, rep=high, GH=high, @willmcgugan, 55k]
    "python-dateutil == 2.*", # [i=norm rep=high, GH=high, @pganssle, 2.5k] ganssle.io, lots of publications and articles
    "sentry-sdk == 2.*",
    "humanize == 4.*", # [i=low, rep=norm, GH=norm, @jmoiron]
    "markdownify == 1.*", # [i=norm, rep=norm, GH=norm, @matthewwithanm, 1.7k] another project 2.3k stars. Other MD packages suck.
    "python-dotenv == 1.*", # [i=low, rep=low, GH=low, @theskumar, 8.2k] hidden GH, only few articles on saurabh-kumar.com/blog/
    "environs == 14.*", # [i=low, rep=high, GH=high, @sloria, 3.1k] - sloria's marshmallow is used by Microsoft, AWS, etc
]

# Python 3.14 support, waiting on GraphQL 3.3.*
#[tool.uv.sources]
#    strawberry-graphql = { git = "https://github.com/strawberry-graphql/strawberry.git", branch = "feature/314" }


[tool.uv]
    dev-dependencies = [
        "ruff == 0.12.*",
        "faker == 37.*",
        "objprint == 0.*",
        "pip == 25.*",
        "wat == 0.6.*",
        "pytest == 8.*",
            "pytest-django == 4.*",
            "pytest-mock == 3.*",
            "pytest-pspec ~= 0.0.4",
            "pytest-rich == 0.*",
    ]


[tool.django-stubs]
    django_settings_module = "neuronhub.settings"


[tool.mypy]
    python_version = "3.13"
    plugins = ["mypy_django_plugin.main"]
    explicit_package_bases = true
    ignore_missing_imports = true
    implicit_optional = true
    show_error_codes = true
    show_column_numbers = true # helps LLMs
    show_absolute_path = true # enables TUI links

    [[tool.mypy.overrides]]
        module = [
            "allauth.*",
            "faker.*",
            "wat.*", # non-lintable magic

            # project
            "*.migrations.*",
            "*.settings",
            "neuronhub.apps.tests.utils", # because it uses `wat`
        ]
        ignore_errors = true


[tool.ruff]
    line-length = 97

    [tool.ruff.lint.isort]
        force-single-line = true
        lines-after-imports = 2
        known-first-party = ["neuronhub"]

    [tool.ruff.lint]
        extend-select = [
            "UP",  # pyupgrade: enforce modern python syntax
        ]
        ignore = [
            # drops unused vars - ignore as they're used as links/docs
            "F841",

            # 2 rules below for multi-line string indent - sounds useless.
            # Use textwrap.dedent(). It's flake8's fault for not detecting dedent().
            "W291",
            "W293",
        ]


[tool.pytest.ini_options]
    DJANGO_SETTINGS_MODULE = "neuronhub.settings"
    python_files = ["*__test.py", "neuronhub/apps/tests/playwright/**"]
    addopts = [
        "--no-migrations",
        "--capture=no", # show print() stdout
        "--color=yes",
        "--code-highlight=yes",
        "--no-header",
        "--pspec", # allows to use docstrings instead of test function names
    ]
    filterwarnings = [
        "ignore::DeprecationWarning:environ.compat",
        "ignore::DeprecationWarning:functools",
    ]
