[project]

name = "neuronhub"
version = "0.0.0.0"
description = ""
requires-python = "~=3.13.0"

# For audit, packages doc reputation. Format:
# [i={importance for project}, rep={reputation online}, GH={github history quality}, @{GH username}, {number of stars}k]
dependencies = [
    # django
    "django == 5.2.*",
        "pillow == 11.*", # [i=high, rep=high, GH=high, @hugovk, 13.1k] for ImageField. @hugovk is an ex-Python release manager; used by Django
    "django-allauth == 65.*",
    "django-anymail == 13.*", # [i=low, rep=norm, GH=high, @medmunds, 1.8k] SF based, KLOC +84/-40
    "django-cors-headers == 4.*", # [i=high, rep=highest, @adamchainz] Django Sec Team
    "django-rich == 2.*", # [i=norm, rep=highest, @adamchainz] Django Sec Team
    "django-extensions == 4.*",
        "ipython == 9.*",
    "strawberry-graphql ~= 0.281",
        "strawberry-graphql-django ~= 0.65.0",
    "django-stubs[compatible-mypy] == 5.*",
    "django-health-check == 3.*", # [i=low, rep=norm, GH=norm, @revsys, 1.3k] US dev agency
    "django-simple-history == 3.*", # [i=high, rep=norm, GH=norm, @django-commons, 2.4k]
    "django-countries == 7.*", # [i=low, rep=norm, GH=norm, @SmileyChris]
    "django-fieldsignals == 0.*", # [i=low, rep=norm, GH=norm, @craigds]
    "django-storages[boto3] == 1.14.6", # [i=norm, rep=low, GH=high, @jschneier, 2.8k] for S3, author dropped it in 2011, maintainer is a no-name - single project
    "dj-database-url == 3.*", # [i=low, rep=norm, GH=norm, @mattseymour]

    # django fields
    "django-timezone-field == 7.*", # [i=low, rep=high, GH=high, @mfogel] rich presence on SO (#103909), AirBnB, Yelp, etc
    "django-choices-field == 3.*", # [i=norm, rep=high, @bellini666] Strawberry maintainer

    # django admin
    "django-admin-sortable2 == 2.*", # [i=norm, rep=norm, GH=high, @jrief, 0.8k] i personally worked with the author
    "django-select2 == 8.*", # [i=low, rep=high, GH=high, @codingjoe, 0.8k] public CV
    "django-hijack == 3.*", # [i=none, rep=high, GH=high, @codingjoe, 1.6k] public CV
    "django-debug-toolbar == 6.*", # [i=low, rep=high, GH=high, @matthiask] 406.ch
    "django-object-actions == 5.*", # [i=none, rep=norm, GH=low, @crccheck, 0.7k] crccheck.com/blog since 2008, 100 posts
    "django-guardian == 3.1.*", # [i=high, rep=norm, GH=high, @thclark, 3.8k] upgrade carefully; integrated by Strawberry; changed owners few times, atm @thclark UK founder
    "django-codemirror2 == 0.2", # [i=low, rep=low, GH=norm, @sk1p, 0.03k] no urls, member of LiberTEM (wat?) - keep frozen

    # server
    "daphne == 4.*",
    "whitenoise == 6.*",

    # utils
    "psycopg[binary] == 3.*",
    "rich == 14.*", # [i=norm, rep=high, GH=high, @willmcgugan, 55k]
    "python-dateutil == 2.*", # [i=norm rep=high, GH=high, @pganssle, 2.5k] ganssle.io, lots of publications and articles
    "sentry-sdk == 2.*",
    "humanize == 4.*", # [i=low, rep=norm, GH=norm, @jmoiron]
    "markdownify == 1.*", # [i=norm, rep=norm, GH=norm, @matthewwithanm, 1.7k] another project 2.3k stars. Other MD packages suck.
    "python-dotenv == 1.*", # [i=low, rep=low, GH=low, @theskumar, 8.2k] hidden GH, only few posts on saurabh-kumar.com/blog/
    "environs == 14.*", # [i=low, rep=high, GH=high, @sloria, 3.1k] - his `marshmallow` used by Microsoft, AWS, etc
    "requests == 2.*",
]

# Python 3.14 support, waiting on GraphQL 3.3.*
#[tool.uv.sources]
#    strawberry-graphql = { git = "https://github.com/strawberry-graphql/strawberry.git", branch = "feature/314" }


[dependency-groups]
    dev = [
        "ruff == 0.13.*",
        "faker == 37.*",
        "objprint == 0.*",
        "pip == 25.*",
        "wat == 0.7.*",
        "pytest == 8.*",
        "pytest-django == 4.*",
        "pytest-pspec ~= 0.0.4", # ~dead, mostly useless
        "pytest-rich == 0.*",
        "types-requests == 2.*",
]


[tool.django-stubs]
    django_settings_module = "neuronhub.settings"


[tool.mypy]
    python_version = "3.13"
    plugins = ["mypy_django_plugin.main", "strawberry.ext.mypy_plugin"]
    explicit_package_bases = true
    ignore_missing_imports = true
    implicit_optional = true
    show_error_codes = true
    show_column_numbers = true # helps LLMs
    show_absolute_path = true # enables TUI links

    [[tool.mypy.overrides]]
        module = [
            "allauth.*",
            "faker.*",
            "wat.*", # non-lintable magic

            # project
            "*.migrations.*",
            "*.settings",
            "neuronhub.apps.tests.utils", # because it uses `wat`
        ]
        ignore_errors = true


[tool.ruff]
    line-length = 97

    [tool.ruff.lint.isort]
        force-single-line = true
        lines-after-imports = 2
        known-first-party = ["neuronhub"]

    [tool.ruff.lint]
        extend-select = [
            "UP",  # pyupgrade: enforce modern python syntax
        ]
        ignore = [
            # drops unused vars - ignore as they're used as links/docs
            "F841",

            # 2 rules below for multi-line string indent - sounds useless.
            # Use textwrap.dedent(). It's flake8's fault for not detecting dedent().
            "W291",
            "W293",
        ]


[tool.pytest.ini_options]
    DJANGO_SETTINGS_MODULE = "neuronhub.settings"
    python_files = ["*__test.py"]
    addopts = [
        "--no-migrations",
        "--capture=no", # show print() stdout
        "--color=yes",
        "--code-highlight=yes",
        "--no-header",
        "--pspec", # allows to use docstrings instead of test function names
    ]
    filterwarnings = [
        "ignore::DeprecationWarning:functools",
    ]
