[project]

name = "neuronhub"
version = "0.0.0.0"
description = ""
requires-python = "~=3.14.0"

# For audit, we document packages trustworthyness. The format:
# [i={importance for this project}, rep={reputation online: blogs, socials, etc}, GH={github history amount & quality}, @{GH username}, {number of GH stars}k] {comments}
dependencies = [
    # django
    "django == 5.2.*",
        "pillow == 12.*", # [i=high, rep=high, GH=high, @hugovk, 13.1k] for ImageField, by CPython core dev; used by Django
    "django-tasks == 0.10.*", # @RealOrangeOne, Django Security Team
    "django-allauth == 65.*",
    "django-anymail == 13.*", # [i=low, rep=norm, GH=high, @medmunds, 1.8k] SF based, weird KLOC: +84/-40
    "django-cors-headers == 4.*", # [i=high, rep=highest, @adamchainz] Django Security Team
    "django-rich == 2.*", # [i=norm, rep=highest, @adamchainz] Django Security Team
    "django-extensions == 4.*",
        "ipython == 9.*",
    "strawberry-graphql ~= 0.288.2",
        "strawberry-graphql-django ~= 0.73.0",
        "django-choices-field == 3.*", # [i=norm, rep=high, GH=high, @bellini666] Strawberry maintainer
    "django-stubs[compatible-mypy] == 5.*",
    "django-health-check == 3.*", # [i=low, rep=norm, GH=norm, @revsys, 1.3k] a US dev agency
    "django-simple-history == 3.*", # [i=high, rep=norm, GH=norm, @django-commons, 2.4k]
    "django-countries == 7.*", # [i=low, rep=norm, GH=norm, @SmileyChris]
    "django-fieldsignals == 0.*", # [i=low, rep=norm, GH=norm, @craigds]
    "dj-database-url == 3.*", # [i=low, rep=norm, GH=norm, @mattseymour]
    "algoliasearch-django >= 4.0.0",
        "algoliasearch >= 4.0.0",
        "pydantic < 2.12.4", # 2.12.4-5 are broken for Python 3.14. Prob was Strawberry bug fixed lately.
    "django-timezone-field == 7.*", # [i=low, rep=high, GH=high, @mfogel] rich presence on SO (#103909), AirBnB, Yelp, etc
    "django-admin-sortable2 == 2.*", # [i=norm, rep=norm, GH=high, @jrief, 0.8k] I know @jrief
    "django-select2 == 8.*", # [i=low, rep=high, GH=high, @codingjoe, 0.8k] has a public CV
    "django-hijack == 3.*", # [i=none, rep=high, GH=high, @codingjoe, 1.6k] has a public CV
    "django-debug-toolbar == 6.*", # [i=low, rep=high, GH=high, @matthiask] 406.ch

    # rep=low/norm - be careful
    "django-storages[boto3] == 1.14.6", # [i=norm, rep=low, GH=high, @jschneier, 2.8k] author dropped it in 2011, maintainer is a no-name with only this repo
    "django-solo == 2.*", # [i=low, rep=low, GH=norm, @lazybird, 1k] used it for 8y. Originally by @johnthagen who did min-sized-rust 10k stars, but given to @lazybird (member of a Canadian company, low activity)
    "django-object-actions == 5.*", # [i=none, rep=norm, GH=low, @crccheck, 0.7k] crccheck.com/blog since 2008, 100 posts
    "django-guardian == 3.2.*", # [i=high, rep=norm, GH=high, @thclark, 3.8k] upgrade carefully; integrated by Strawberry; changed owners few times, atm @thclark, a founder from UK
    "django-codemirror2 == 0.2", # [i=low, rep=low, GH=norm, @sk1p, 0.03k] no info, team, or urls #freeze

    # server
    "daphne == 4.*",
    "whitenoise == 6.*",

    # utils
    "psycopg[binary] == 3.*",
    "sentry-sdk[django] == 2.*",
    "requests == 2.*",
    "rich == 14.*", # [i=norm, rep=high, GH=high, @willmcgugan, 55k]
    "python-dateutil == 2.*", # [i=norm rep=high, GH=high, @pganssle, 2.5k] ganssle.io, lots of publications and articles
    "humanize == 4.*", # [i=low, rep=high, GH=high, @hugovk, 0.7k] CPython core dev
    "markdownify == 1.*", # [i=norm, rep=norm, GH=norm, @matthewwithanm, 1.7k] has a 2.3k stars project. Other MD packages I tried suck.
    "python-dotenv == 1.2.1", # [i=low, rep=low, GH=low, @theskumar, 8.2k] hidden GH, only few posts on saurabh-kumar.com/blog/ #freeze
    "environs == 14.*", # [i=low, rep=high, GH=high, @sloria, 3.1k] - his `marshmallow` pypi used by Microsoft, AWS, etc

    "beautifulsoup4[lxml] == 4.*",
]


[dependency-groups]
    dev = [
        "ruff == 0.14.*",
        "faker == 37.*",
        "objprint == 0.*",
        "pip == 25.*",
        "wat == 0.7.*",
        "pytest == 8.*",
        "pytest-django == 4.*",
        "pytest-pspec == 0.0.4", # ~dead, mostly useless, #freeze
        "pytest-rich == 0.*",
        "types-requests == 2.*",
    ]


[tool.django-stubs]
    django_settings_module = "neuronhub.settings"


[tool.mypy]
    python_version = "3.14"
    plugins = ["mypy_django_plugin.main", "strawberry.ext.mypy_plugin"]
    explicit_package_bases = true
    ignore_missing_imports = true
    implicit_optional = true
    show_error_codes = true
    show_column_numbers = true # helps LLMs
    show_absolute_path = true # enables TUI links in IDEA

    [[tool.mypy.overrides]]
        module = [
            "allauth.*",
            "faker.*",
            "wat.*", # it's a non-lintable magic

            # project
            "*.migrations.*",
            "*.settings",
            "neuronhub.apps.tests.utils", # because it uses "wat"
        ]
        ignore_errors = true


[tool.ruff]
    line-length = 97

    [tool.ruff.lint.isort]
        force-single-line = true
        lines-after-imports = 2
        known-first-party = ["neuronhub"]

    [tool.ruff.lint]
        extend-select = [
            "UP",  # "pyupgrade" - enforces modern python syntax
        ]
        ignore = [
            # drops "unused-variable"s - off as we use them as docs and links
            "F841",

            # disable 2 multi-line string indent rules - they sound useless.
            # Use textwrap.dedent() - which flake8 is unaware of.
            "W291",
            "W293",
        ]


[tool.pytest.ini_options]
    DJANGO_SETTINGS_MODULE = "neuronhub.settings"
    python_files = ["*__test.py"]
    addopts = [
        "--no-migrations",
        "--capture=no", # "no" streams print() to stdout
        "--color=yes",
        "--code-highlight=yes",
        "--no-header",
        "--pspec", # allows to use docstrings instead of test function names
    ]
    filterwarnings = [
        "ignore::DeprecationWarning:functools",
    ]
    markers = [
        "slow: tests external HTTP queries"
    ]
